IGNITE-28362 Fix CacheTestAsync.TestPutAll after IGNITE-23416