@@ -18,6 +18,7 @@
 package org.apache.ignite.internal.processors.platform.client.cache;
 
 import java.io.Serializable;
+import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
 import java.util.Map;
@@ -60,7 +61,7 @@ public class ImmutableArrayMap<K, V> implements Map<K, V>, Serializable {
         assert keysArr.length == valuesArr.length : "Arrays should be equal in size!";
 
         this.keys = new ImmutableArraySet<>(keysArr);
-        this.values = List.of(valuesArr);
+        this.values = Arrays.asList(valuesArr);
     }
 
     /** {@inheritDoc} */
